--- a/index.html
+++ b/index.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
-<html onclick="play()">
+<html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body { background: black; margin: 0; height: 100vh; display: flex; align-items: center; justify-content: center; }
-        h1 { color: #333; font-family: sans-serif; }
+        body {
+            background-color: black;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
+            font-family: sans-serif;
+            cursor: pointer;
+            user-select: none;
+        }
+        h1 {
+            font-size: 2rem;
+            text-align: center;
+            z-index: 10;
+        }
+        .fire {
+            position: absolute;
+            bottom: 0;
+            width: 150px;
+            height: 300px;
+            background: orange;
+            filter: blur(50px);
+            opacity: 0;
+            transition: opacity 0.3s;
+            border-radius: 50% 50% 0 0;
+            box-shadow: 0 0 100px red, 0 0 150px yellow;
+        }
+        .left { left: -50px; }
+        .right { right: -50px; }
+        .active .fire { opacity: 0.8; animation: flicker 0.1s infinite alternate; }
+        @keyframes flicker {
+            from { transform: scale(1); }
+            to { transform: scale(1.1); }
+        }
     </style>
 </head>
-<body>
-    <h1>?</h1> <audio id="audio" src="https://files.catbox.moe/ah9988.mp3"></audio>
+<body onclick="play()">
+
+    <h1>ТУНГ ТУНГ ТУНГ САХУР</h1>
+
+    <div id="fire-left" class="fire left"></div>
+    <div id="fire-right" class="fire right"></div>
+
+    <audio id="sound" src="https://files.catbox.moe/ah9988.mp3"></audio>
+
     <script>
         function play() {
-            var audio = document.getElementById("audio");
-            audio.play();
+            document.getElementById('sound').play();
+            document.body.classList.add('active');
         }
     </script>
 </body>
