Change audio source in index.html
Updated audio source for sound playback.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="fire-left" class="fire left"></div>
     <div id="fire-right" class="fire right"></div>
 
-    <audio id="sound" src="https://files.catbox.moe/ah9988.mp3"></audio>
+    <audio id="sound" src="https://files.catbox.moe/o65xi2.mp3"></audio>
 
     <script>
         function play() {
@@ -60,3 +60,4 @@
     </script>
 </body>
 </html>
+
