Change character image source in index.html
Updated character image source in the HTML file.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="fire-overlay"></div>
     
-    <img id="character" src="ССЫЛКА_НА_ТВОЕ_ФОТО" alt="Tung Tung Sahur">
+    <img id="character" src="https://files.catbox.moe/e465sk.jpg" alt="Tung Tung Sahur">
 
     <audio id="sound" src="https://files.catbox.moe/o65xi2.mp3"></audio>
 
@@ -79,3 +79,4 @@
     </script>
 </body>
 </html>
+
